--- a/learn.css
+++ b/learn.css
@@ -375,3 +375,6 @@ p{
     user-select: none;           /* Non-prefixed version, currently
                                   not supported by any browser */
 }
+*{
+    touch-action: none;
+}
